--- a/xombrero-gtk2-git/PKGBUILD
+++ b/xombrero-gtk2-git/PKGBUILD
@@ -1,12 +1,13 @@
 # Contributor: Splex
 # Contributor: Lex Black <autumn-wind at web dot de>
 # Contributor: Jérémie Astor <astor.jeremie@wanadoo.fr>
+# Contributor: Cyrille Laloy <dev at tukoz dot it>
 
 _pkgname=xombrero
-pkgname=xombrero-git
+pkgname=xombrero-gtk2-git
 pkgver=1.6.4.7.g28d1406
 pkgrel=1
-pkgdesc="minimalist web browser - gtk2 version (no need for heavy webkitgtk)"
+pkgdesc="minimalist web browser - gtk2 version (no need for webkitgtk)"
 arch=('i686' 'x86_64')
 url="http://opensource.conformal.com/wiki/xombrero"
 license=('custom:ISC')
@@ -14,7 +15,7 @@ depends=('webkitgtk2' 'libbsd' 'desktop-file-utils')
 makedepends=('git')
 install=$pkgname.install
 provides=('xombrero')
-conflicts=('xxxterm' 'xombrero' 'xombrero3')
+conflicts=('xxxterm' 'xombrero' 'xombrero3' 'xombrero-git')
 source=('git+https://github.com/conformal/xombrero.git'
         'LICENSE')
 md5sums=('SKIP'
