--- a/xombrero-gtk2-git/PKGBUILD
+++ b/xombrero-gtk2-git/PKGBUILD
@@ -7,7 +7,7 @@ _pkgname=xombrero
 pkgname=xombrero-gtk2-git
 pkgver=1.6.4.7.g28d1406
 pkgrel=1
-pkgdesc="minimalist web browser - gtk2 version (no need for webkitgtk)"
+pkgdesc="Minimalist web browser - gtk2 version (no need for webkitgtk ;-)"
 arch=('i686' 'x86_64')
 url="http://opensource.conformal.com/wiki/xombrero"
 license=('custom:ISC')
