Updated Slimjet PKGBUID.

--- a/slimjet/PKGBUILD
+++ b/slimjet/PKGBUILD
@@ -1,5 +1,6 @@
 # Maintainer: eagleeyetom <eagleeyetom@gmail.com>
-# Contrubutor: raininja <raijin@rai.ninja>
+# Contributor: raininja <raijin@rai.ninja>
+# Contributor: tukoz <sys@tukoz.it>
 
 pkgname=slimjet
 pkgver=10.0.1.0
