--- a/xombrero-gtk2.git/PKGBUILD
+++ b/xombrero-gtk2.git/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Cyrille Laloy <dev at tukoz dot it>
 
 _pkgname=xombrero
-pkgname=xombrero-gtk2-git
+pkgname=xombrero-gtk2.git
 pkgver=1.6.4.7.g28d1406
 pkgrel=1
 pkgdesc="Minimalist web browser - gtk2 version"
