xombrero-gtk2: Added AUR special files.

--- a/xombrero-gtk2-git/PKGBUILD
+++ b/xombrero-gtk2-git/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=1.6.4.7.g28d1406
 pkgrel=1
 pkgdesc="Minimalist web browser - gtk2 version"
 arch=('i686' 'x86_64')
-url="http://opensource.conformal.com/wiki/xombrero"
+url="https://github.com/conformal/xombrero/wiki"
 license=('custom:ISC')
 depends=('webkitgtk2' 'libbsd' 'desktop-file-utils')
 makedepends=('git')
